fix: the email and password are added to the user to use it with the auth

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -40,6 +40,7 @@ services:
       DB_PWD : 'admin'
       DB_NAME: 'postgres'
       DB_TYPE: 'postgres'
+      SECRET_KEY: 'phr453'
 
     ports:
       - "3000:3000"
