--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "@nestjs/schedule": "^1.1.0",
     "@nestjs/swagger": "^5.2.1",
     "@nestjs/typeorm": "^8.0.3",
+    "@types/jsonwebtoken": "^8.5.8",
     "axios": "^0.27.2",
     "bcrypt": "^5.0.1",
     "class-transformer": "^0.5.1",
@@ -38,11 +39,13 @@
     "crypto": "^1.0.1",
     "crypto-js": "^4.1.1",
     "joi": "^17.6.0",
+    "jsonwebtoken": "^8.5.1",
     "ncrypt-js": "^2.0.0",
     "passport": "^0.5.2",
     "passport-jwt": "^4.0.0",
     "passport-local": "^1.0.0",
     "pg": "^8.7.3",
+    "redis": "^3.1.2",
     "reflect-metadata": "^0.1.13",
     "rimraf": "^3.0.2",
     "rxjs": "^7.2.0",
@@ -58,6 +61,7 @@
     "@types/express": "^4.17.13",
     "@types/jest": "^27.0.1",
     "@types/node": "^16.11.36",
+    "@types/passport-jwt": "^3.0.6",
     "@types/supertest": "^2.0.11",
     "@typescript-eslint/eslint-plugin": "^4.28.2",
     "@typescript-eslint/parser": "^4.28.2",
