--- a/package.json
+++ b/package.json
@@ -40,6 +40,7 @@
     "crypto-js": "^4.1.1",
     "joi": "^17.6.0",
     "jsonwebtoken": "^8.5.1",
+    "moment-timezone": "^0.5.34",
     "ncrypt-js": "^2.0.0",
     "passport": "^0.5.2",
     "passport-jwt": "^4.0.0",
@@ -57,6 +58,7 @@
     "@nestjs/cli": "^8.0.0",
     "@nestjs/schematics": "^8.0.0",
     "@nestjs/testing": "^8.0.0",
+    "@types/cron": "^2.0.0",
     "@types/dotenv": "^8.2.0",
     "@types/express": "^4.17.13",
     "@types/jest": "^27.0.1",
